src/test/resources/30/single/opf/invalid/prefixes-redeclare.opf
<?xml version="1.0" encoding="UTF-8"?>
<package xmlns="http://www.idpf.org/2007/opf" version="3.0" unique-identifier="uid"
    xmlns:dc="http://purl.org/dc/elements/1.1/"
		prefix="media: http://should/not/redeclare
		        rendition: http://www.idpf.org/vocab/rendition/#
		        foo: http://idpf.org/epub/vocab/package/#">
	<!-- 2 warnings expected 
	     - 'media' being redeclared to an overriding vocab
	     - 'foo' redaclaring a default vocab
	     
	     The re-declaration of 'rendition' to its default vocab is ignored.
	     - 
	-->
    <metadata>
        <dc:identifier id="uid">xxx</dc:identifier>
        <dc:title>Title</dc:title>
        <dc:language>en</dc:language>
        <meta property="dcterms:modified">2019-01-01T12:00:00Z</meta>
    </metadata>
    <manifest>
        <item id="t001" href="contents.xhtml" properties="nav" media-type="application/xhtml+xml"/>
    </manifest>
    <spine>
        <itemref idref="t001"/>
    </spine>
</package>